--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "license": "GPL-3.0",
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=16.13.0"
   },
   "main": "./bin/app.js",
   "files": [
@@ -28,98 +28,71 @@
     "name": "Daniel Amesberger"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.5",
-    "@deepstream/client": "^5.1.10",
+    "@apollo/client": "^3.5.5",
+    "@deepstream/client": "^5.2.5",
+    "@types/react": "^17.0.37",
     "address": "^1.1.2",
-    "agentkeepalive": "^4.1.3",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
-    "apollo-link-http": "^1.5.17",
-    "apollo-link-ws": "^1.0.20",
-    "apollo-server-express": "^2.19.0",
-    "apollo-utilities": "^1.3.4",
+    "agentkeepalive": "^4.1.4",
+    "apollo-server-express": "^3.5.0",
     "async-child-process": "^1.1.1",
-    "axios": "^0.19.1",
-    "chalk": "^3.0.0",
-    "class-validator": "^0.11.0",
+    "axios": "^0.24.0",
+    "chalk": "^4.1.2",
+    "class-validator": "^0.13.2",
     "codependency": "^2.1.0",
     "colors": "^1.4.0",
-    "dotenv": "^8.2.0",
-    "epoll": "^3.0.0",
-    "fs-extra": "^8.1.0",
-    "graphql": "^14.7.0",
-    "graphql-tag": "^2.11.0",
-    "inversify": "^5.0.1",
+    "commander": "^8.3.0",
+    "dotenv": "^10.0.0",
+    "epoll": "^4.0.1",
+    "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
+    "graphql": "^16.0.1",
+    "graphql-tag": "^2.12.6",
+    "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
-    "joi": "^17.3.0",
-    "js-yaml": "^3.13.1",
-    "json-rules-engine": "^5.0.0",
-    "jwt-decode": "^2.2.0",
-    "knx": "git+https://github.com/DAmesberger/knx.js.git",
+    "joi": "^17.5.0",
+    "js-yaml": "^4.1.0",
+    "json-rules-engine": "^6.1.2",
+    "jwt-decode": "^3.1.2",
+    "knx": "^2.4.1",
     "log-driver": "^1.2.7",
-    "msgpack": "^1.0.3",
-    "node-cron": "^2.0.3",
-    "node-fetch": "^2.6.0",
-    "node-ipc": "^9.1.3",
-    "node-red": "^1.2.5",
-    "node-red-contrib-pilot": "file:../node-red-contrib-pilot",
+    "moment": "^2.29.1",
+    "mqtt": "^4.2.8",
+    "node-cron": "^3.0.0",
+    "node-red": "^2.1.4",
     "node-red-contrib-typescript-node": "^0.1.0",
-    "node-wifi": "git+https://github.com/DAmesberger/node-wifi.git",
-    "ntp-time-sync": "^0.1.0",
-    "openid-client": "^4.2.1",
+    "ntp-time-sync": "^0.2.0",
+    "openid-client": "^5.1.0",
     "os-service": "^2.2.0",
     "qrcode-terminal": "^0.12.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "rosnodejs": "^3.0.2",
-    "selectn": "^1.1.2",
-    "serialport": "^9.0.2",
-    "ssh2": "^0.8.9",
-    "subscriptions-transport-ws": "^0.9.18",
-    "uuid": "^8.3.1",
-    "ws": "^7.4.0",
-    "xstate": "^4.14.0",
-    "yargs": "^16.1.0"
+    "serialport": "^9.2.8",
+    "ssh2": "^1.5.0",
+    "subscriptions-transport-ws": "^0.11.0",
+    "uuid": "^8.3.2",
+    "ws": "^8.3.0",
+    "xstate": "^4.26.1"
   },
   "devDependencies": {
-    "@google/local-home-sdk": "^1.1.0",
-    "@types/bleno": "^0.4.1",
-    "@types/chai": "^4.2.14",
-    "@types/fs-extra": "^8.0.1",
-    "@types/js-yaml": "^3.12.1",
-    "@types/jwt-decode": "^2.2.1",
-    "@types/mocha": "^8.0.4",
-    "@types/node-cron": "^2.0.2",
-    "@types/node-red": "^1.1.1",
-    "@types/react": "^16.9.56",
-    "@types/ssh2": "^0.5.39",
-    "@types/uuid": "^3.4.6",
-    "@types/yargs": "^15.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
-    "chai": "^4.2.0",
-    "del": "^5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-graphql": "^3.1.1",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "graphql-config": "^2.2.1",
-    "gulp": "^4.0.2",
-    "gulp-mocha": "^7.0.2",
-    "gulp-scp2": "^0.2.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "gulp-watch": "^5.0.1",
-    "mocha": "^8.2.1",
-    "ts-node": "^9.0.0",
-    "typescript": "^4.0.5",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "@types/chai": "^4.2.22",
+    "@types/fs-extra": "^9.0.13",
+    "@types/js-yaml": "^4.0.5",
+    "@types/mocha": "^9.0.0",
+    "@types/node-cron": "^3.0.0",
+    "@types/ssh2": "^0.5.49",
+    "@types/uuid": "^8.3.3",
+    "@types/validator": "^13.7.0",
+    "@types/ws": "^8.2.2",
+    "chai": "^4.3.4",
+    "del": "^6.0.0",
+    "eslint": "^8.4.1",
+    "mocha": "^9.1.3",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2"
+  },
+  "peerDependencies": {
+    "@types/node": "^16.11.12"
   },
   "optionalPeerDependencies": {
     "bleno": "^8.0.5"
