--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^17.0.37",
     "address": "^1.1.2",
     "agentkeepalive": "^4.1.4",
+    "apollo-server-core": "^3.5.0",
     "apollo-server-express": "^3.5.0",
     "async-child-process": "^1.1.1",
     "axios": "^0.24.0",
