--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pilotnode",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "preview": true,
   "description": "Pilot Client Node",
   "keywords": [
@@ -81,6 +81,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/mocha": "^9.0.0",
     "@types/node-cron": "^3.0.0",
+    "@types/node-red": "^1.2.0",
     "@types/ssh2": "^0.5.49",
     "@types/uuid": "^8.3.3",
     "@types/validator": "^13.7.0",
