--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "log-driver": "^1.2.7",
     "moment": "^2.29.1",
     "mqtt": "^4.2.8",
-    "netvar": "github:DAmesberger/netvar",
+    "netvar": "github:DAmesberger/netvar#1.2.0",
     "node-cron": "^3.0.0",
     "node-red": "^2.1.4",
     "node-red-contrib-typescript-node": "^0.1.0",
