package version bump to current, CommonJS to ESM

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,42 @@
 {
-  "compilerOptions": {
-    "target": "es2017",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "allowJs": true,
-    "checkJs": true,
-    "outDir": "./bin",
-    "sourceMap": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "strict": true,
-    //"noImplicitAny": true,
-    //"strictNullChecks": true
-    "plugins": [
-      {
-        "name": "@divyenduz/ts-graphql-plugin"
-      }
-    ],  
-    "baseUrl": ".",  // needed for custom mapping of typing
-    // custom mapping of typing
-    "paths": {
-      "*": ["typings/*"] //generic version
-    }//,
+    "compilerOptions": {
+        "target": "ES2022",
+        "module": "ES2022",
+        "moduleResolution": "bundler",
+        "moduleDetection": "force",
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "allowJs": true,
+        "checkJs": true,
+        "outDir": "./bin",
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "strict": true,
+        "noImplicitAny": false,
+        //"strictNullChecks": true
+        // "typeRoots": [
+        //     "./node_modules/@types",
+        //     "./typings"
+        // ],
+        "plugins": [
+            {
+                "name": "@divyenduz/ts-graphql-plugin"
+            }
+        ],
+        "baseUrl": ".", // needed for custom mapping of typing
+        // custom mapping of typing
+        "paths": {
+            "*": [
+                "typings/*"
+            ] //generic version
+        } //,
     //"typeRoots": [ "./node_modules/deepstream.io-client.js/src/client.d.ts" ]
-  },
-  "include": ["src/**/*.ts" ],
-  "exclude": ["node_modules"]
+    },
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ]
 }
