--- a/package.json
+++ b/package.json
@@ -1,108 +1,106 @@
 {
-  "name": "pilotnode",
-  "version": "0.5.4",
-  "preview": true,
-  "description": "Pilot Client Node",
-  "keywords": [
-    "pilot",
-    "automation",
-    "raspberrypi",
-    "pilotcockpit"
-  ],
-  "license": "GPL-3.0",
-  "engines": {
-    "node": ">=16.13.0"
-  },
-  "main": "./bin/app.js",
-  "files": [
-    "bin/**/*.js"
-  ],
-  "bin": {
-    "pilotnode": "./bin/app.js"
-  },
-  "scripts": {
-    "schema": "apollo schema:download --endpoint https://gql-testing.pilotnexus.io/v1/graphql --header 'X-Hasura-Admin-Secret: $HASURA_ADMIN_SECRET'",
-    "test": "mocha"
-  },
-  "author": {
-    "name": "Daniel Amesberger"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.5.5",
-    "@deepstream/client": "^5.2.5",
-    "@types/react": "^17.0.37",
-    "address": "^1.1.2",
-    "agentkeepalive": "^4.1.4",
-    "apollo-server-core": "^3.5.0",
-    "apollo-server-express": "^3.5.0",
-    "axios": "^0.24.0",
-    "chalk": "^4.1.2",
-    "class-validator": "^0.13.2",
-    "codependency": "^2.1.0",
-    "colors": "^1.4.0",
-    "commander": "^8.3.0",
-    "dotenv": "^10.0.0",
-    "epoll": "^4.0.1",
-    "express": "^4.17.1",
-    "fs-extra": "^10.0.0",
-    "graphql": "^16.0.1",
-    "graphql-tag": "^2.12.6",
-    "inversify": "^6.0.1",
-    "inversify-binding-decorators": "^4.0.0",
-    "joi": "^17.5.0",
-    "js-yaml": "^4.1.0",
-    "json-rules-engine": "^6.1.2",
-    "jwt-decode": "^3.1.2",
-    "knx": "^2.4.1",
-    "log-driver": "^1.2.7",
-    "moment": "^2.29.1",
-    "mqtt": "^4.2.8",
-    "netvar": "git+https://git@github.com/DAmesberger/netvar#1.2.1",
-    "node-cron": "^3.0.0",
-    "node-red": "^2.1.4",
-    "node-red-contrib-typescript-node": "^0.1.0",
-    "ntp-time-sync": "^0.2.0",
-    "openid-client": "^5.1.0",
-    "os-service": "^2.2.0",
-    "qrcode-terminal": "^0.12.0",
-    "react": "^17.0.2",
-    "reflect-metadata": "^0.1.13",
-    "rosnodejs": "^3.0.2",
-    "serialport": "^9.2.8",
-    "ssh2": "^1.5.0",
-    "subscriptions-transport-ws": "^0.11.0",
-    "uuid": "^8.3.2",
-    "ws": "^8.3.0",
-    "xstate": "^4.26.1"
-  },
-  "devDependencies": {
-    "@types/chai": "^4.2.22",
-    "@types/fs-extra": "^9.0.13",
-    "@types/js-yaml": "^4.0.5",
-    "@types/mocha": "^9.0.0",
-    "@types/node-cron": "^3.0.0",
-    "@types/node-red": "^1.2.0",
-    "@types/ssh2": "^0.5.49",
-    "@types/uuid": "^8.3.3",
-    "@types/validator": "^13.7.0",
-    "@types/ws": "^8.2.2",
-    "chai": "^4.3.4",
-    "del": "^6.0.0",
-    "eslint": "^8.4.1",
-    "mocha": "^9.1.3",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
-  },
-  "peerDependencies": {
-    "@types/node": "^16.11.12"
-  },
-  "optionalPeerDependencies": {
-    "bleno": "^8.0.5"
-  },
-  "pkg": {
-    "scripts": [
-      "bin/connectors/rule/ruleworker.js",
-      "bin/connectors/telemetry/telemetryworker.js"
-    ]
-  }
+    "name": "pilotnode",
+    "version": "0.5.5",
+    "preview": true,
+    "type": "module",
+    "description": "Pilot Client Node",
+    "keywords": [
+        "pilot",
+        "automation",
+        "raspberrypi",
+        "pilotcockpit"
+    ],
+    "license": "GPL-3.0",
+    "engines": {
+        "node": ">=16.13.0"
+    },
+    "exports": "./bin/app.js",
+    "files": [
+        "bin/**/*.js"
+    ],
+    "bin": {
+        "pilotnode": "./bin/app.js"
+    },
+    "scripts": {
+        "schema": "apollo schema:download --endpoint https://gql-testing.pilotnexus.io/v1/graphql --header 'X-Hasura-Admin-Secret: $HASURA_ADMIN_SECRET'",
+        "test": "mocha"
+    },
+    "author": {
+        "name": "Daniel Amesberger"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.7.14",
+        "@apollo/server": "4.7.1",
+        "@deepstream/client": "^7.0.1",
+        "@graphql-tools/schema": "^9.0.19",
+        "address": "^1.2.2",
+        "agentkeepalive": "^4.3.0",
+        "axios": "^1.4.0",
+        "chalk": "^5.2.0",
+        "class-validator": "^0.14.0",
+        "codependency": "^2.1.0",
+        "commander": "^10.0.1",
+        "dotenv": "^16.0.3",
+        "epoll": "^4.0.1",
+        "express": "^4.18.2",
+        "fs-extra": "^11.1.1",
+        "graphql-tag": "^2.12.6",
+        "graphql-ws": "^5.12.1",
+        "inversify": "^6.0.1",
+        "inversify-binding-decorators": "^4.0.0",
+        "iterall": "^1.3.0",
+        "joi": "^17.9.2",
+        "js-yaml": "^4.1.0",
+        "json-rules-engine": "^6.1.2",
+        "jwt-decode": "^3.1.2",
+        "knx": "^2.5.2",
+        "log-driver": "^1.2.7",
+        "moment": "^2.29.4",
+        "mqtt": "^4.3.7",
+        "netvar": "git+https://git@github.com/DAmesberger/netvar#1.2.1",
+        "node-cron": "^3.0.2",
+        "node-red": "^3.0.2",
+        "ntp-time-sync": "^0.3.0",
+        "openid-client": "^5.4.2",
+        "os-service": "^2.2.0",
+        "qrcode-terminal": "^0.12.0",
+        "react": "^18.2.0",
+        "reflect-metadata": "^0.1.13",
+        "rosnodejs": "^3.1.0",
+        "serialport": "^11.0.0",
+        "ssh2": "^1.12.0",
+        "uuid": "^9.0.0",
+        "ws": "^8.13.0",
+        "xstate": "^4.37.2"
+    },
+    "devDependencies": {
+        "@types/chai": "^4.3.5",
+        "@types/fs-extra": "^11.0.1",
+        "@types/js-yaml": "^4.0.5",
+        "@types/mocha": "^10.0.1",
+        "@types/node-cron": "^3.0.7",
+        "@types/node-red": "^1.3.1",
+        "@types/os-service": "^2.2.1",
+        "@types/react": "^18.2.6",
+        "@types/ssh2": "^1.11.11",
+        "@types/uuid": "^9.0.1",
+        "@types/validator": "^13.7.16",
+        "chai": "^5.0.0-alpha.0",
+        "del": "^7.0.0",
+        "eslint": "^8.40.0",
+        "esm": "^3.2.25",
+        "graphql": "^16.6.0",
+        "mocha": "^10.2.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.4"
+    },
+    "optionalPeerDependencies": {
+        "bleno": "^8.0.5"
+    },
+    "pkg": {
+        "scripts": [
+            "bin/connectors/rule/ruleworker.js",
+            "bin/connectors/telemetry/telemetryworker.js"
+        ]
+    }
 }
