--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "@apollo/server": "4.7.1",
         "@deepstream/client": "^7.0.1",
         "@graphql-tools/schema": "^9.0.19",
+        "serialport": "^11.0.0",
+        "@serialport/parser-delimiter": "11.0.0",
         "address": "^1.2.2",
         "agentkeepalive": "^4.3.0",
         "axios": "^1.4.0",
@@ -67,7 +69,6 @@
         "react": "^18.2.0",
         "reflect-metadata": "^0.1.13",
         "rosnodejs": "^3.1.0",
-        "serialport": "^11.0.0",
         "ssh2": "^1.12.0",
         "uuid": "^9.0.0",
         "ws": "^8.13.0",
