--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pilotnode",
-    "version": "0.5.7",
+    "version": "0.5.8",
     "preview": true,
     "type": "module",
     "description": "Pilot Client Node",
@@ -29,7 +29,7 @@
         "name": "Daniel Amesberger"
     },
     "dependencies": {
-        "@apollo/client": "^3.7.14",
+        "@apollo/client": "^3.8.6",
         "@apollo/server": "4.7.1",
         "@deepstream/client": "^7.0.1",
         "@graphql-tools/schema": "^9.0.19",
@@ -63,10 +63,13 @@
         "ntp-time-sync": "^0.3.0",
         "openid-client": "^5.4.2",
         "os-service": "^2.2.0",
+        "pino": "^8.16.0",
+        "pino-pretty": "^10.2.3",
         "qrcode-terminal": "^0.12.0",
         "react": "^18.2.0",
         "reflect-metadata": "^0.1.13",
         "rosnodejs": "^3.1.0",
+        "rotating-file-stream": "^3.1.1",
         "serialport": "^11.0.0",
         "ssh2": "^1.12.0",
         "uuid": "^9.0.0",
