--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pilotnode",
-    "version": "0.5.8",
+    "version": "0.5.9",
     "preview": true,
     "type": "module",
     "description": "Pilot Client Node",
@@ -64,6 +64,8 @@
         "openid-client": "^5.4.2",
         "os-service": "^2.2.0",
         "pino": "^8.16.0",
+        "pino-abstract-transport": "^1.1.0",
+        "pino-multi-stream": "^6.0.0",
         "pino-pretty": "^10.2.3",
         "qrcode-terminal": "^0.12.0",
         "react": "^18.2.0",
@@ -71,6 +73,7 @@
         "rosnodejs": "^3.1.0",
         "rotating-file-stream": "^3.1.1",
         "serialport": "^11.0.0",
+        "sonic-boom": "^3.7.0",
         "ssh2": "^1.12.0",
         "uuid": "^9.0.0",
         "ws": "^8.13.0",
