--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pilotnode",
-    "version": "0.5.17",
+    "version": "0.5.19",
     "preview": true,
     "type": "module",
     "description": "Pilot Client Node",
@@ -71,6 +71,7 @@
         "reflect-metadata": "^0.1.13",
         "rosnodejs": "^3.1.0",
         "rotating-file-stream": "^3.1.1",
+        "segfault-handler": "^1.3.0",
         "serialport": "^11.0.0",
         "sonic-boom": "^3.7.0",
         "ssh2": "^1.12.0",
